@@ -14,6 +14,8 @@ an application.
 
 Updated the manual.
 
+Added Large and Small toolbar buttons. Right-clicking brings up a menu.
+
 06-Sep-2000
 ~~~~~~~~~~~
 Moved 'Set Run Action' to the file menu (suggested by Ewan Mac Mahon), and
